--- a/lib/loupgarou_web/controllers/page_html/home.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/home.html.heex
@@ -1,3 +1,5 @@
+<!-- Author Marta DL dec 6 10:18AM --> 
+
 
 
     <h1><span style="color: #2e4b85;">LOUP GAROU (ALMOST) ORIGINAL GAME</span></h1>
@@ -38,3 +40,19 @@
         }
     </script>
 
+
+    
+  <!-- Author Elise Nov 29 12:09 PM --> 
+
+    
+     
+    <form action="/create_game_room" method="post">
+      <button type="submit">Create Room</button>
+    </form>
+
+    <!-- <%= form_for @conn, Routes.page_path(@conn, :create_game_room), [method: :post], fn f -> %>
+      <%= submit "Create Room" %>
+    <% end %>
+    -->
+
+    
