trying to solve the multiple addresses page redirection problem, not done

--- a/lib/loupgarou_web/controllers/page_html/home.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/home.html.heex
@@ -1,4 +1,4 @@
-<!-- Author Marta DL dec 6 10:18AM --> 
+    <!-- Author Marta DL dec 6 10:18AM --> 
 
 
 
@@ -45,14 +45,11 @@
   <!-- Author Elise Nov 29 12:09 PM --> 
 
     
-     
+     <p>&nbsp;</p>
     <form action="/create_game_room" method="post">
-      <button type="submit">Create Room</button>
+      <button type="submit">Create Room Elise button that does not work lol</button>
     </form>
 
-    <!-- <%= form_for @conn, Routes.page_path(@conn, :create_game_room), [method: :post], fn f -> %>
-      <%= submit "Create Room" %>
-    <% end %>
-    -->
+  
 
-    
+ 
