--- a/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
@@ -1,3 +1,4 @@
+<!-- Author Marta DL dec 6 10:18AM --> 
 <p>Your game &lt;game code&gt; will start as soon as you wish</p>
 <p>&nbsp;players online: </p>
 <p>&nbsp;</p>
