--- a/lib/loupgarou_web/controllers/page_html/waiting_room_player.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/waiting_room_player.html.heex
@@ -1,2 +1,3 @@
+<!-- Author Marta DL dec 6 10:18AM --> 
 <p>You are waiting for game &lt;game code&gt; to start</p>
 <p>Number of players presents :</p>
