modified function for joining a room with a code

--- a/lib/loupgarou_web/controllers/page_html/home.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/home.html.heex
@@ -5,11 +5,13 @@
     <h1><span style="color: #2e4b85;">LOUP GAROU (ALMOST) ORIGINAL GAME</span></h1>
     <p>🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺</p>
     <p>&nbsp;</p>
-    <p><cite contenteditable="true" id="nameInput">Write your own name here</cite></p>
+    <p><cite contenteditable="true" id="nameInput">Write your name here</cite></p>
     <p>&nbsp;</p>
     <button type="button" onclick="redirectToNewGame()">New game!</button>
     <p>&nbsp;</p>
-    <button type="button" onclick="redirectToExistingGame()">Join party!</button>
+    <p><cite contenteditable="true" id="gameCodeInput">Enter game code here</cite></p>
+    <p>&nbsp;</p>
+    <button type="button" onclick="redirectToExistingGame()">Join existing game!</button>
 
     <script>
         function getName() {
@@ -17,9 +19,14 @@
             return document.getElementById('nameInput').innerText.trim();
         }
 
+        function getGameCodeInput() {
+            // Retrieve the name from the contenteditable element
+            return document.getElementById('gameCodeInput').innerText.trim();
+        }
+
         function redirectToNewGame() {
           const name = getName();
-          if (name && (name !== 'Write your own name here')) {
+          if (name && (name !== 'Write your name here')) {
               console.log('Starting new game with name:', name);
               //Edit Elise Dec 6 13:22
               window.location.href = `/create_game_room?name=${encodeURIComponent(name)}`;
@@ -29,15 +36,38 @@
       }
 
         function redirectToExistingGame() {
-            const name = getName();
-            if (name && (name !== 'Write your own name here')) {
-                console.log('Joining existing game with name:', name);
-                // Example: Add name to the URL as a query parameter
-                window.location.href = `/join-game?name=${encodeURIComponent(name)}`;
+    const name = getName();
+    const gameCode = getGameCodeInput();
+
+    if (!name || name === 'Write your name here') {
+        alert('Please enter your name!');
+        return;
+    }
+
+    if (!gameCode) {
+        alert('Please enter a valid game code!');
+        return;
+    }
+
+    console.log('Checking if game room exists for code:', gameCode);
+
+// TODO LISE MAKE SURE THAT GENERATING A NEW ROOM BY ENTERNING A RANDOM CODE DOES NOT WORK
+    // Make a request to the server to check if the room exists
+    fetch(`/join_game_room/${encodeURIComponent(gameCode)}`)
+        .then(response => {
+            if (response.ok) {
+                console.log('Room exists, redirecting...');
+                window.location.href = `/join_game_room/${encodeURIComponent(gameCode)}?name=${encodeURIComponent(name)}`;
             } else {
-                alert('Please enter your name!');
+                alert('The game room with the provided code does not exist!');
             }
-        }
+        })
+        .catch(error => {
+            console.error('Error checking game room:', error);
+            alert('An error occurred while checking the game room. Please try again.');
+        });
+}
+
     </script>
 
 
