--- a/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
@@ -1,5 +1,11 @@
 <!-- Author Marta DL dec 6 10:18AM --> 
-<p>Your game &lt;game code&gt; will start as soon as you wish</p>
+<p>Your game with the game code: <%= @code %>; will start as soon as you wish</p>
 <p>&nbsp;players online: </p>
+<ul>
+  <%= for player_map <- @players do %>
+    <% {player_name, _pid} = Enum.at(player_map, 0) %>
+    <li><%= player_name %></li>
+  <% end %>
+</ul>
 <p>&nbsp;</p>
 <p><button type="button">Let's begin</button></p>
