--- a/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
@@ -1,6 +1,5 @@
-<!-- Author Marta DL dec 6 10:18AM --> 
 <p>Your game with the game code: <%= @code %>; will start as soon as you wish</p>
-<p>&nbsp;players online: </p>
+<p>players online: </p>
 <ul>
   <%= for player_map <- @players do %>
     <% {player_name, _pid} = Enum.at(player_map, 0) %>
@@ -8,4 +7,10 @@
   <% end %>
 </ul>
 <p>&nbsp;</p>
-<p><button type="button">Let's begin</button></p>
+<button type="button" onclick = "switchToRoleDistributionPage()">Let's begin</button>
+
+<script> 
+    function switchToRoleDistributionPage(){
+        window.location.href = '/role_distribution';
+    }
+</script>
