Yeah, the role Distribution is now finally workinggit add -Agit add -Agit add -A The ratio between Wolfs and Villager is 1 to 3, can be changed in the pageController if wanted.

--- a/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
@@ -1,16 +1,13 @@
 <p>Your game with the game code: <%= @code %>; will start as soon as you wish</p>
 <p>players online: </p>
-<ul>
-  <%= for player_map <- @players do %>
-    <% {player_name, _pid} = Enum.at(player_map, 0) %>
-    <li><%= player_name %></li>
-  <% end %>
-</ul>
-<p>&nbsp;</p>
-<button type="button" onclick = "switchToRoleDistributionPage()">Let's begin</button>
+<%= for{playerName, _pid} <- @playerMap do %>
+  <p><%= playerName %></p>
+<% end %>
 
-<script> 
-    function switchToRoleDistributionPage(){
-        window.location.href = '/role_distribution';
+<button type="button" onclick={"redirectToRoleDistribution('#{@code}')"}>Let's begin</button>
+
+  <script>
+    function redirectToRoleDistribution(code){
+      window.location.href = '/role_distribution/' + code
     }
-</script>
+  </script>
