Now it should show you your role

--- a/lib/loupgarou_web/controllers/page_html/home.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/home.html.heex
@@ -29,7 +29,9 @@
             if (name !== "") {
                 console.log('Starting new game with name:', name);
                 //Edit Elise Dec 6 13:22
-                window.location.href = `/create_game_room?name=${encodeURIComponent(name)}`;
+                //window.location.href = `/create_game_room?name=${encodeURIComponent(name)}`;
+                
+                window.location.href = '/create_game_room/' + name
             } else {
                 alert('Please enter your name!');
             }
