--- a/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/waiting_room_master.html.heex
@@ -1,13 +1,34 @@
-<p>Your game with the game code: <%= @code %>; will start as soon as you wish</p>
-<p>players online: </p>
-<%= for{playerName, _pid} <- @playerMap do %>
-  <p><%= playerName %></p>
-<% end %>
-
-<button type="button" onclick={"redirectToRoleDistribution('#{@code}', '#{@playerName}')"}>Let's begin</button>
+  <p>Your game with the game code: <strong><%= @code %></strong> will start as soon as you wish</p>
+<br>
+  <p>Players online:</p>
+    <br>
+  <ul style="list-style-type: disc; margin-left: 20px;">
+    <%= for {playerName, _pid} <- @playerMap do %>
+      <li style="margin-bottom: 5px;"><%= playerName %></li>
+    <% end %>
+  </ul>
+<br>
+<button class="clickable-button" type="button" onclick={"redirectToRoleDistribution('#{@code}', '#{@playerName}')"}>Start game!</button>
 
   <script>
     function redirectToRoleDistribution(code, playerName){
       window.location.href = '/role_distribution/' + code + '/' + playerName
     }
   </script>
+
+
+<style>
+  .clickable-button {
+    background-color: #4CAF50; /* Green background */
+    color: white; /* White text */
+    border: none; /* Remove default border */
+    padding: 10px 20px; /* Add padding */
+    text-align: center; /* Center the text */
+    text-decoration: none; /* Remove underline */
+    display: inline-block; /* Make it inline */
+    font-size: 16px; /* Set font size */
+    border-radius: 5px; /* Rounded corners */
+    cursor: pointer; /* Pointer cursor on hover */
+    transition: background-color 0.3s ease; /* Smooth hover transition */
+  }
+</style>
