--- a/lib/loupgarou_web/controllers/page_html/wolf_role.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/wolf_role.html.heex
@@ -1,12 +1,9 @@
 
+<div class="role-container">
 <h1>Your role is....</h1>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTck_Fl6l-F-2X5l5aHNtgz3nXVt-La9cicXA&s" alt="Trulli" >
 <h2> A Werewolf</h2>
 <p> The werewolf is the game’s villain and main antagonist. The werewolf’s only job is to stalk the villagers at night and kill them without getting caught. This role bla bla bla.....</p>
 <button type="button">Understand</button>
-
-
-
-
-
+</div>
 
