--- a/lib/loupgarou_web/controllers/page_html/villager_role.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/villager_role.html.heex
@@ -3,12 +3,11 @@
   <img src="https://images.vexels.com/media/users/3/128325/isolated/preview/0f52205b21536ca0dbbdac51891348e0-old-farmer-cartoon.png" alt="Trulli">
   <h2>A Villager</h2>
   <p>The most commonplace role, a simple Villager, spends the game trying to root out who they believe the werewolves are.</p>
-  <button type="button">Understand</button>
+  <button class="clickable-button" type="button" onclick={"redirectToNight('#{@code}', '#{@name}')"}>Understand</button>
 </div>
 
-
-<script> 
-    function redirectToNightTime(code, playerName){
-        window.location.href ='/night_time/'+ code + '/' + playerName
+  <script>
+    function redirectToNight(code, playerName){
+      window.location.href = '/night_time/' + code + '/' + playerName
     }
-</script>
+  </script>
