--- a/lib/loupgarou_web/controllers/page_html/home.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/home.html.heex
@@ -1,15 +1,22 @@
 
-    <h1><span style="color: #2e4b85;">LOUP GAROU (ALMOST) ORIGINAL GAME</span></h1>
-    <p>🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺</p>
-    <p>&nbsp;</p>
-    <input type="text" id="nameInput" placeholder="Write your name here" style="width: 20%; padding: 10px; font-size: 16px;">
-    <p>&nbsp;</p>
-    <button class="clickable-button" type="button" onclick="redirectToNewGame()">New game!</button>
-    <p>&nbsp;</p>
-    <input type="text" id="gameCodeInput" placeholder="Enter game code here" style="width: 20%; padding: 10px; font-size: 16px;">
-    <p>&nbsp;</p>
-    <button class="clickable-button" type="button" onclick="redirectToExistingGame()">Join existing game!</button>
-
+    
+<body>
+  <h1>
+    <span class="cap-main-page">L</span><span class="title-main-page">OUP </span>
+    <span class="cap-main-page">G</span><span class="title-main-page">AROU</span>
+  </h1>
+  <h2><span class="title2-main-page">(ALMOST) ORIGINAL GAME</span></h2>
+  <p>&nbsp;</p>
+  <h2><span>🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺 🐺</span></h2>
+  <p>&nbsp;</p>
+  <input class="text-input-field" type="text" id="nameInput" placeholder="Write your name here">
+  <p>&nbsp;</p>
+  <button class="clickable-button" type="button" onclick="redirectToNewGame()">New game!</button>
+  <p>&nbsp;</p>
+  <input class="text-input-field" type="text" id="gameCodeInput" placeholder="Enter game code here">
+  <p>&nbsp;</p>
+  <button class="clickable-button" type="button" onclick="redirectToExistingGame()">Join existing game!</button>
+</body>
 
     <script>
         function getName() {
