--- a/lib/loupgarou_web/controllers/page_html/dead.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/dead.html.heex
@@ -3,7 +3,7 @@
   <h1>Morning arrives, and everyone wakes up. Everyone, except ...</h1>
   <img src="https://t3.ftcdn.net/jpg/01/76/52/20/360_F_176522043_NBVB7bJTHStrqG3ONiM7QpExAz2mDAUR.jpg" alt="Trulli">
   <p> <%= @dead %>  </p>
-  <p>This Person is dead, killed by a Werewold.</p>
+  <p>This Person is dead, killed by a Werewolf.</p>
   
 
   <button class="clickable-button" type="button" onclick={"redirectToVoteDay('#{@code}', '#{@name}')"}>OH NO!</button>
