--- a/lib/loupgarou_web/controllers/page_html/home.html.heex
+++ b/lib/loupgarou_web/controllers/page_html/home.html.heex
@@ -13,7 +13,7 @@
   <p>&nbsp;</p>
   <button class="clickable-button" type="button" onclick="redirectToNewGame()">New game!</button>
   <p>&nbsp;</p>
-  <input class="text-input-field" type="text" id="gameCodeInput" placeholder="Enter game code here">
+  <input class="text-input-field-code" type="text" id="gameCodeInput" placeholder="Enter game code here">
   <p>&nbsp;</p>
   <button class="clickable-button" type="button" onclick="redirectToExistingGame()">Join existing game!</button>
 </body>
